2014-03-12
* add script to test integrity of archives

2014-03-10
* createbatarchive.py: support MANIFESTS to prevent checksums from being
generated if they are already known
* add script to efficiently copy BAT archives and normal files from the
directory used to generate the BAT archives

2014-03-09
* support LZMA compressed data in createdb.py and createbatarchive.py
* remove more duplicate information from the BAT archives

2014-03-08
* createbatarchive.py: generate SHA256SUM-ARCHIVE files

2014-03-07
* createdb.py: use SHA256SUM-ARCHIVE if available

2014-03-05
* createbatarchive.py: store order in which archives were created as this is
important for order in which the files should be read by createdb.py

2014-03-03
* include statistics piecharts in reports in GUI
* add more data to statistics piecharts
* better handle kernel function names

2014-03-02
* process patches with ctags to get (some) identifiers out of patches. This is
not always complete since ctags depends on contextual information (like
matching curly brackets) which might have gotten lost in the patch
* keep better track of amount of unmatched lines and use this information for
generating better piecharts with statistics about assignments
* add number of matches in piecharts with statistics about assignments
* keep better track of matched, but unassigned lines (too low score). Report
these in the statistics piecharts and reports. Also fix a few errors: not all
unmatched lines for the Linux kernel were stored

2014-03-01
* add support for package specific extensions and process these files as well.
Currently output from ctags is not yet processed since ctags looks at
extensions to guess the language. Files should be temporarily be renamed first
before being fed to ctags.

2014-02-28
* replace most (but not all) options in batchextractprogramstrings.py with a
configuration file. The configuration options that are 'static' (location of